# CellForRow

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/realsil/android/dongle/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFAudioConvertTool.cpp  FFAudioConvertTool.h  FFAudioFifo.cpp  FFAudioFifo.h  FFDecoder.cpp  FFDecoder.h  FFDemux.cpp  FFDemux.h  FFResample.cpp  FFResample.h  SLAudioPlayer.cpp  SLAudioPlayer.h  SLAudioRecorder.cpp  SLAudioRecorder.h  SLLog.cpp  SLLog.h  native-lib.cpp
app/src/main/java/com/realsil/android/dongle/: AppConfig.java  DongleApplication.java  PathDefine.java
app/src/main/java/com/realsil/android/dongle/action/: MessageAction.java
app/src/main/java/com/realsil/android/dongle/activity/: MainActivity.java  SplashActivity.java  UsbCommActivity.java
app/src/main/java/com/realsil/android/dongle/adapter/: UsbDebugMsgListAdapter.java  UsbMsgListAdapter.java
app/src/main/java/com/realsil/android/dongle/base/: BaseActivity.java  BaseFragment.java
app/src/main/java/com/realsil/android/dongle/entity/: BluetoothDeviceInfo.java  SendPacketInfo.java  UsbMsg.java
app/src/main/java/com/realsil/android/dongle/fragment/: UsbAudioFragment.java  UsbDebugFragment.java  UsbDownloadPatchFragment.java
app/src/main/java/com/realsil/android/dongle/helper/: DownloadPatchHelper.java  UsbAudioHelper.java
app/src/main/java/com/realsil/android/dongle/provider/: ShareProvider.java
app/src/main/java/com/realsil/android/dongle/util/: BluetoothUtil.java  ByteUtils.java  CrashCollectionUtil.java  FileUtil.java  LogX.java  ScreenUtil.java  TimeUtil.java
app/src/main/java/com/realsil/android/dongle/view/: ToolbarX.java
app/src/main/res/anim/: anim_slide_in_left.xml  anim_slide_in_right.xml  anim_slide_out_left.xml  anim_slide_out_right.xml
app/src/main/res/color/: btn_bar_button_item_text_selector.xml
app/src/main/res/drawable/: btn_device_item_selector.xml  btn_nav_bar_filter_selector.xml  btn_nav_bluetooth_connect_selector.xml  btn_nav_usb_settings_selector.xml  btn_save_log_selector.xml  shape_select_box_bg.xml  shape_unselect_box_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  activity_usb_comm.xml  fragment_usb_audio.xml  fragment_usb_debug.xml  fragment_usb_download_patch.xml  include_usb_data_debug_settings.xml  list_item_usb_msg.xml  widget_toast.xml
app/src/main/res/menu/: menu_main_bottom_navigation.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_path.xml
app/src/test/java/com/realsil/android/dongle/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libUsbGatt/: build.gradle
libUsbGatt/src/androidTest/java/com/realsil/sdk/core/usb/: ExampleInstrumentedTest.java
libUsbGatt/src/main/: AndroidManifest.xml
libUsbGatt/src/main/java/com/realsil/sdk/core/usb/: UsbGatt.java  (+4 more)
libUsbGatt/src/main/res/values/: strings.xml
(+85 files in other folders)
